# haxer

./: .gitignore  CMakeLists.txt  haxer.cpp
src/haxer/: CMakeLists.txt
src/haxer/messages/: GetChartLastRequest.hpp  Login.hpp
src/haxer/socket/: ISendRecive.hpp  SSLConnection.cpp  SSLConnection.hpp  SystemSocket.cpp  SystemSocket.hpp
src/haxer/socket/exceptions/: SocketExceptions.hpp
src/haxer/trade/: Common.hpp  TradeAnalyzer.cpp  TradeAnalyzer.hpp  TradeManager.cpp  TradeManager.hpp
